# json-c

./: CMakeLists.txt  config.h.cmake  json_object.c  json_object.h  json_util.c
CMakeModules/: BaseConfig.cmake
extra/: inttypes.h  stdint.h
